--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "lepass-example",
+  "name": "lepass",
   "version": "0.0.1",
   "description": "",
-  "repository": "https://github.com/xdfcn/lepass-example",
+  "repository": "https://github.com/xdfcn/lepass",
   "scripts": {
     "start": "node ./bin/www"
   },
-  "author": "idy0013@gmail",
+  "author": "idy0013@gmail.com",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.5.2",
-    "boot-settings": "*",
     "connect-mongo": "^0.4.1",
     "consolidate": "^0.10.0",
     "cookie-parser": "^1.3.2",
@@ -18,7 +17,9 @@
     "express-session": "^1.7.2",
     "jade": "^1.5.0",
     "log4js": "^0.6.16",
+
+    "boot-settings": "*",
     "passlock": "*",
-    "passlock-mongodb-adapter": "0.0.1"
+    "passlock-mongodb-adapter": "*"
   }
 }
