Update package dependencies

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "cookie-parser": "^1.3.2",
     "express": "^4.7.2",
     "express-session": "^1.7.2",
-    "lepass-settings": "leango/lepass-settings",
     "extend": "^1.3.0",
     "jade": "^1.5.0",
+    "lepass-settings": "leango/lepass-settings",
     "log4js": "^0.6.16",
     "passlock": "*",
-    "passlock-mongodb-adapter": "*"
+    "passlock-mongodb-adapter": "*",
+    "require-routes": "^0.1.0"
   }
 }
